--- a/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli_starter.ipynb
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1227,7 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th>Purchase Count</th>\n",
-       "      <th>Item Price</th>\n",
+       "      <th>Price</th>\n",
        "      <th>Total Purchase Value</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1240,18 +1240,18 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <th>Final Critic</th>\n",
-       "      <td>13</td>\n",
-       "      <td>$4.61</td>\n",
-       "      <td>$59.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>178</th>\n",
        "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
        "      <td>12</td>\n",
        "      <td>$4.23</td>\n",
        "      <td>$50.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <th>Extraction, Quickblade Of Trembling Hands</th>\n",
+       "      <td>9</td>\n",
+       "      <td>$3.53</td>\n",
+       "      <td>$31.77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>145</th>\n",
@@ -1261,55 +1261,62 @@
        "      <td>$41.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <th>Persuasion</th>\n",
+       "      <th>82</th>\n",
+       "      <th>Nirvana</th>\n",
        "      <td>9</td>\n",
-       "      <td>$3.22</td>\n",
-       "      <td>$28.99</td>\n",
+       "      <td>$4.90</td>\n",
+       "      <td>$44.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>108</th>\n",
-       "      <th>Extraction, Quickblade Of Trembling Hands</th>\n",
-       "      <td>9</td>\n",
-       "      <td>$3.53</td>\n",
-       "      <td>$31.77</td>\n",
+       "      <th>37</th>\n",
+       "      <th>Shadow Strike, Glory of Ending Hope</th>\n",
+       "      <td>8</td>\n",
+       "      <td>$3.16</td>\n",
+       "      <td>$25.28</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                     Purchase Count  \\\n",
-       "Item ID Item Name                                                     \n",
-       "92      Final Critic                                             13   \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm             12   \n",
-       "145     Fiery Glass Crusader                                      9   \n",
-       "132     Persuasion                                                9   \n",
-       "108     Extraction, Quickblade Of Trembling Hands                 9   \n",
-       "\n",
-       "                                                     Item Price  \\\n",
-       "Item ID Item Name                                                 \n",
-       "92      Final Critic                                      $4.61   \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm      $4.23   \n",
-       "145     Fiery Glass Crusader                              $4.58   \n",
-       "132     Persuasion                                        $3.22   \n",
-       "108     Extraction, Quickblade Of Trembling Hands         $3.53   \n",
+       "                                                      Purchase Count  Price  \\\n",
+       "Item ID Item Name                                                             \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm              12  $4.23   \n",
+       "108     Extraction, Quickblade Of Trembling Hands                  9  $3.53   \n",
+       "145     Fiery Glass Crusader                                       9  $4.58   \n",
+       "82      Nirvana                                                    9  $4.90   \n",
+       "37      Shadow Strike, Glory of Ending Hope                        8  $3.16   \n",
        "\n",
        "                                                     Total Purchase Value  \n",
        "Item ID Item Name                                                          \n",
-       "92      Final Critic                                               $59.99  \n",
        "178     Oathbreaker, Last Hope of the Breaking Storm               $50.76  \n",
+       "108     Extraction, Quickblade Of Trembling Hands                  $31.77  \n",
        "145     Fiery Glass Crusader                                       $41.22  \n",
-       "132     Persuasion                                                 $28.99  \n",
-       "108     Extraction, Quickblade Of Trembling Hands                  $31.77  "
+       "82      Nirvana                                                    $44.10  \n",
+       "37      Shadow Strike, Glory of Ending Hope                        $25.28  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#define items and set the index \n",
+    "most_items = purchase_data.groupby(['Item ID', 'Item Name','Price'])['Price'].agg(['count','sum'])\n",
+    "most_items.columns = ['Purchase Count', 'Total Purchase Value']\n",
+    "most_items.reset_index(inplace=True)\n",
+    "most_items.set_index(['Item ID','Item Name'] ,inplace=True)\n",
+    "most_items = most_items[['Purchase Count', 'Price', 'Total Purchase Value']]\n",
+    "\n",
+    "#organizes the purchase count column \n",
+    "popular_items = most_items.sort_values(by='Purchase Count', ascending=False)\n",
+    "\n",
+    "#clean formatting \n",
+    "popular_items['Price'] = popular_items['Price'].map('${:,.2f}'.format)\n",
+    "popular_items['Total Purchase Value'] = popular_items['Total Purchase Value'].map('${:,.2f}'.format)\n",
+    "popular_items.head()"
+   ]
   },
   {
    "cell_type": "markdown",
