--- a/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli_starter.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -335,18 +335,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Male</th>\n",
-       "      <td>84.027778</td>\n",
-       "      <td>484</td>\n",
+       "      <td>113.194444</td>\n",
+       "      <td>652</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Female</th>\n",
-       "      <td>14.062500</td>\n",
-       "      <td>81</td>\n",
+       "      <td>19.618056</td>\n",
+       "      <td>113</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other / Non-Disclosed</th>\n",
-       "      <td>1.909722</td>\n",
-       "      <td>11</td>\n",
+       "      <td>2.604167</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -354,19 +354,19 @@
       ],
       "text/plain": [
        "                       Percentage of Players  Total Count\n",
-       "Male                               84.027778          484\n",
-       "Female                             14.062500           81\n",
-       "Other / Non-Disclosed               1.909722           11"
+       "Male                              113.194444          652\n",
+       "Female                             19.618056          113\n",
+       "Other / Non-Disclosed               2.604167           15"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#group by gender\n",
-    "gender_count = purchase_data[[\"Gender\", \"SN\"]]\n",
+    "gender_count = purchase_data[[\"Gender\", \"SN\", \"Purchase ID\", \"Price\"]]\n",
     "gender_count = gender_count.drop_duplicates()\n",
     "final_count = gender_count[\"Gender\"].value_counts()\n",
     "\n",
@@ -408,49 +408,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_50ab1880_001a_11eb_b19a_821493ea3801\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Purchase Count</th>        <th class=\"col_heading level0 col1\" >Average Purchase Price</th>        <th class=\"col_heading level0 col2\" >Average Purchase Value</th>        <th class=\"col_heading level0 col3\" >Avg Purchase Total per Person</th>    </tr>    <tr>        <th class=\"index_name level0\" >Gender</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_3c26cae8_001b_11eb_b19a_821493ea3801\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Purchase Count</th>        <th class=\"col_heading level0 col1\" >Average Purchase Price</th>        <th class=\"col_heading level0 col2\" >Average Purchase Value</th>        <th class=\"col_heading level0 col3\" >Average Purchase Total per Person</th>    </tr>    <tr>        <th class=\"index_name level0\" >Gender</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_50ab1880_001a_11eb_b19a_821493ea3801level0_row0\" class=\"row_heading level0 row0\" >Male</th>\n",
-       "                        <td id=\"T_50ab1880_001a_11eb_b19a_821493ea3801row0_col0\" class=\"data row0 col0\" >780</td>\n",
-       "                        <td id=\"T_50ab1880_001a_11eb_b19a_821493ea3801row0_col1\" class=\"data row0 col1\" >$3.05</td>\n",
-       "                        <td id=\"T_50ab1880_001a_11eb_b19a_821493ea3801row0_col2\" class=\"data row0 col2\" >$2,379.77</td>\n",
-       "                        <td id=\"T_50ab1880_001a_11eb_b19a_821493ea3801row0_col3\" class=\"data row0 col3\" >$4.92</td>\n",
+       "                        <th id=\"T_3c26cae8_001b_11eb_b19a_821493ea3801level0_row0\" class=\"row_heading level0 row0\" >Male</th>\n",
+       "                        <td id=\"T_3c26cae8_001b_11eb_b19a_821493ea3801row0_col0\" class=\"data row0 col0\" >780</td>\n",
+       "                        <td id=\"T_3c26cae8_001b_11eb_b19a_821493ea3801row0_col1\" class=\"data row0 col1\" >$3.05</td>\n",
+       "                        <td id=\"T_3c26cae8_001b_11eb_b19a_821493ea3801row0_col2\" class=\"data row0 col2\" >$2,379.77</td>\n",
+       "                        <td id=\"T_3c26cae8_001b_11eb_b19a_821493ea3801row0_col3\" class=\"data row0 col3\" >3.649954</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_50ab1880_001a_11eb_b19a_821493ea3801level0_row1\" class=\"row_heading level0 row1\" >Female</th>\n",
-       "                        <td id=\"T_50ab1880_001a_11eb_b19a_821493ea3801row1_col0\" class=\"data row1 col0\" >780</td>\n",
-       "                        <td id=\"T_50ab1880_001a_11eb_b19a_821493ea3801row1_col1\" class=\"data row1 col1\" >$3.05</td>\n",
-       "                        <td id=\"T_50ab1880_001a_11eb_b19a_821493ea3801row1_col2\" class=\"data row1 col2\" >$2,379.77</td>\n",
-       "                        <td id=\"T_50ab1880_001a_11eb_b19a_821493ea3801row1_col3\" class=\"data row1 col3\" >$29.38</td>\n",
+       "                        <th id=\"T_3c26cae8_001b_11eb_b19a_821493ea3801level0_row1\" class=\"row_heading level0 row1\" >Female</th>\n",
+       "                        <td id=\"T_3c26cae8_001b_11eb_b19a_821493ea3801row1_col0\" class=\"data row1 col0\" >780</td>\n",
+       "                        <td id=\"T_3c26cae8_001b_11eb_b19a_821493ea3801row1_col1\" class=\"data row1 col1\" >$3.05</td>\n",
+       "                        <td id=\"T_3c26cae8_001b_11eb_b19a_821493ea3801row1_col2\" class=\"data row1 col2\" >$2,379.77</td>\n",
+       "                        <td id=\"T_3c26cae8_001b_11eb_b19a_821493ea3801row1_col3\" class=\"data row1 col3\" >21.059912</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_50ab1880_001a_11eb_b19a_821493ea3801level0_row2\" class=\"row_heading level0 row2\" >Other / Non-Disclosed</th>\n",
-       "                        <td id=\"T_50ab1880_001a_11eb_b19a_821493ea3801row2_col0\" class=\"data row2 col0\" >780</td>\n",
-       "                        <td id=\"T_50ab1880_001a_11eb_b19a_821493ea3801row2_col1\" class=\"data row2 col1\" >$3.05</td>\n",
-       "                        <td id=\"T_50ab1880_001a_11eb_b19a_821493ea3801row2_col2\" class=\"data row2 col2\" >$2,379.77</td>\n",
-       "                        <td id=\"T_50ab1880_001a_11eb_b19a_821493ea3801row2_col3\" class=\"data row2 col3\" >$216.34</td>\n",
+       "                        <th id=\"T_3c26cae8_001b_11eb_b19a_821493ea3801level0_row2\" class=\"row_heading level0 row2\" >Other / Non-Disclosed</th>\n",
+       "                        <td id=\"T_3c26cae8_001b_11eb_b19a_821493ea3801row2_col0\" class=\"data row2 col0\" >780</td>\n",
+       "                        <td id=\"T_3c26cae8_001b_11eb_b19a_821493ea3801row2_col1\" class=\"data row2 col1\" >$3.05</td>\n",
+       "                        <td id=\"T_3c26cae8_001b_11eb_b19a_821493ea3801row2_col2\" class=\"data row2 col2\" >$2,379.77</td>\n",
+       "                        <td id=\"T_3c26cae8_001b_11eb_b19a_821493ea3801row2_col3\" class=\"data row2 col3\" >158.651333</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f890a204160>"
+       "<pandas.io.formats.style.Styler at 0x7f890a204100>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#count the total purchases by gender \n",
-    "gender_count = purchase_data[[\"Purchase ID\", \"Price\"]]\n",
     "purchase_count = gender_count[\"Purchase ID\"].count()\n",
     "\n",
     "#calculates average prices, purchase totals, etc.\n",
@@ -462,7 +461,7 @@
     "gender_demographics = pd.DataFrame({\"Purchase Count\": purchase_count, \n",
     "                                    \"Average Purchase Price\": average_purchase_price,\n",
     "                                    \"Average Purchase Value\":average_purchase_total,\n",
-    "                                    \"Avg Purchase Total per Person\": average_purchase_per_person})\n",
+    "                                    \"Average Purchase Total per Person\": average_purchase_per_person})\n",
     "\n",
     "#provide index for \"Gender\"\n",
     "gender_demographics.index.name = \"Gender\"\n",
